--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,11 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+    // gradle.projectsEvaluated {
+    //     tasks.withType(JavaCompile) {
+    //         options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
+    //     }
+    // }
 }
 
 task clean(type: Delete) {
